--- a/bug_e_debug/08_assertion/index.html
+++ b/bug_e_debug/08_assertion/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
-    <title>05 Exercicio</title>
+    <title>08 Assertion</title>
 </head>
 <body>
     
